@@ -3,6 +3,7 @@ Revision history for Bytes::Random::Secure
 0.13 2099-12-31
   - UNDER DEVELOPMENT
   - POD clarification, enhancement.
+  - Improved backwards compatibility support for Perl v5.6.x.
 
 0.12 2012-12-09
   - Applied rewrite of random_bytes() from Dana Jacobsen, that improves
